ola-parser/src/testdata/syntaxTests/parsing/multiple_event_arg_trailing_comma.sol
contract test {
    event Test(uint a, uint b,);
    fn(uint a) {}
}
// ----
// ParserError 7591: (45-46): Unexpected trailing comma in parameter list.
